comment out cloudwatch-logs-agent due to current failure of *gather EC2 facts* module due to being removed

--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -28,4 +28,4 @@
   roles:
     - common
     - anthcourtney.cis-amazon-linux
-    - dharrisio.aws-cloudwatch-logs-agent
+    # - dharrisio.aws-cloudwatch-logs-agent
